@@ -1,23 +1,18 @@
 <html>
 
 <head>
-<title>How to build GCJ/LIBGCJ from snapshots or cvs</title>
+<title>How to build GCJ/LIBGCJ from snapshots or checkouts</title>
 </head>
 
 <body>
 
+<h1>Howto build and run libgcj/gcj snapshots or checkouts</h1>
+
 <table border="0" cellpadding="4" width="95%">
-        <tr bgcolor="#b0d0ff"> 
-          <th align="center"> 
-            <h2>Howto build and run libgcj/gcj snapshots or cvs</h2>
-          </th>
-        </tr>
-
-
 <tr bgcolor="#cccccc">
 <td>
 <pre>
-1. <a href="../snapshots.html">Get a GCC snapshot</a> or <a href="../cvs.html">obtain GCC via CVS</a>.
+1. <a href="../snapshots.html">Get a GCC snapshot</a> or <a href="../svn.html">check out the sources</a>.
 </pre>
 </td>
 </tr>
