@@ -1,5 +1,11 @@
 2011-10-29  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* build-snapshot.html: Adjust title to not refer to CVS any more.
+	Adjust formatting of title.
+	Change link from CVS instructions to SVN.
+
+2011-10-29  Gerald Pfeifer  <gerald@pfeifer.com>
+
 	* done.html: Use <th> for the header.
 
 2011-05-15  Gerald Pfeifer  <gerald@pfeifer.com>
